<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="hello">Hello World, PracticeActivity!</string>
<string name="app_name">Pedometer_IIoT</string>
<string name="action_settings">Settings</string>
<string name="onAccuracyChanged">onAccuracyChanged doesn’t
    detonate</string>
<string name="AT">0</string>
    <string name="Steps">0</string>
    <string name="Bumps">0</string>
<string name="Button_Write">Write</string>
<string name="Button_Stop">Stop</string>
</resources>
