<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <CheckedTextView
        android:id="@+id/AT"
        android:layout_width="match_parent"
        android:layout_height="392dp"
        android:text="@string/AT"
        android:textSize="24sp" />

    <CheckedTextView
        android:id="@+id/onAccuracyChanged"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onAccuracyChanged"
        android:textSize="18dp" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <Button
            android:id="@+id/Button_Write"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/Button_Write"
            android:textSize="20dp"/>
        <Button
            android:id="@+id/Button_Stop"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/Button_Stop"
            android:textSize="20dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/Steps"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:text="@string/Steps"
        android:textSize="24dp"/>
</LinearLayout>

